Remove archive and other fields replaced by a new script field
