# prapp/models.py
@@ -29,12 +29,9 @@ class ProcessImplementation(models.Model):
     author = models.ForeignKey('auth.User', related_name='process_implementations')
     process_definition = models.ForeignKey(ProcessDefinition, related_name='implementations')
     appliance = models.CharField(max_length=256)
-    archive_url = models.URLField(blank=True, default='')
     creation_date = models.DateTimeField(auto_now_add=True)
-    executable = models.CharField(max_length=2048)
     cwd = models.CharField(max_length=2048, blank=True, default='~')
-    environment = JSONField(blank=True, default='{}')
-    argv = JSONField(blank=True, default='[]')
+    script = models.CharField(max_length=2048)
     output_type = models.CharField(max_length=256)
     output_parameters = JSONField(blank=True, default='{}')
 
